WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228831
Suppress more -Wreturn-type warnings
https://bugs.webkit.org/show_bug.cgi?id=228831
Summary
Suppress more -Wreturn-type warnings
Michael Catanzaro
Reported
2021-08-05 08:44:13 PDT
Suppress more -Wreturn-type warnings using RELEASE_ASSERT_NOT_REACHED(), as usual.
Attachments
Patch for landing
(1.61 KB, patch)
2021-08-05 08:46 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-08-05 08:46:07 PDT
Created
attachment 434989
[details]
Patch for landing
EWS
Comment 2
2021-08-05 09:44:17 PDT
Committed
r280697
(
240294@main
): <
https://commits.webkit.org/240294@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434989
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-08-05 09:45:19 PDT
<
rdar://problem/81570901
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug