Suppress more -Wreturn-type warnings https://bugs.webkit.org/show_bug.cgi?id=228831

Unreviewed.

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-08-05

* platform/KeyboardScrollingAnimator.cpp:
(WebCore::KeyboardScrollingAnimator::keyboardScrollForKeyboardEvent const):

Canonical link: https://commits.webkit.org/240294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280697 268f45cc-cd09-0410-ab3c-d52691b4dbfc